2013-02-07  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed.  Rolled Chromium DEPS to r180752.  Requested by
        thakis_ via sheriffbot.

        * DEPS:

2013-02-06  Terry Anderson  <tdanderson@chromium.org>

        Add support for gesture scroll events that do not propagate to enclosing scrollables
        https://bugs.webkit.org/show_bug.cgi?id=108849

        Reviewed by Antonio Gomes.

        Define the new event type GestureScrollUpdateWithoutPropagation.

        * public/WebInputEvent.h:
        (WebKit::WebInputEvent::isGestureEventType):
        * src/PageWidgetDelegate.cpp:
        (WebKit::PageWidgetDelegate::handleInputEvent):
        * src/WebInputEventConversion.cpp:
        (WebKit::PlatformGestureEventBuilder::PlatformGestureEventBuilder):
        * src/WebPluginContainerImpl.cpp:
        * src/WebPopupMenuImpl.cpp:
        (WebKit::WebPopupMenuImpl::handleInputEvent):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::handleGestureEvent):

2013-02-06  Alexandre Elias  <aelias@chromium.org>

        Make ScrollView::paint() clip by visibleContentRect
        https://bugs.webkit.org/show_bug.cgi?id=108888

        Reviewed by Levi Weintraub.

        When applyPageScaleFactorInCompositor or fixedVisibleContentRect
        are used, frameRect() and visibleContentRect(true).size() are
        no longer synonyms, and the latter is the one that should be
        used for clipping paints.

        New WebFrameTest: pageScaleFactorScalesPaintClip.

        * tests/WebFrameTest.cpp:

2013-02-06  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r142025.
        http://trac.webkit.org/changeset/142025
        https://bugs.webkit.org/show_bug.cgi?id=109091

        broke the build (Requested by tdanderson on #webkit).

        * public/WebInputEvent.h:
        (WebKit::WebInputEvent::isGestureEventType):
        * src/PageWidgetDelegate.cpp:
        (WebKit::PageWidgetDelegate::handleInputEvent):